# ApacheCon_2022_IoT

./: .dockerignore  .env  .env.example  CHANGELOG.md  CONTRIBUTING.md  DEFAULT_CONFIG.json5  Dockerfile  Dockerfile.bridge  Dockerfile.dashboard  Dockerfile.frontend  Dockerfile.panel  Dockerfile.simulator  Dockerfile.test  Makefile  PR_BODY.md  PR_DESCRIPTION.md  README.md  UsefulLinks.md  docker-compose.yml  panel_script.py  pip_output.txt  pip_user_install_output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_minimal_retrieve_test.sh  run_producer_test.sh  run_retrieve_test.sh  run_subscriber_test.sh  setup_zenoh.sh  zenoh_producer.py  zenoh_retrieve.py  zenoh_subscriber.py  zenohd_config.json5
.github/workflows/: dashboard-tests.yml  lint.yml  pylint.yml  test.yml
Parts/: part1.py  part2.py  part3.py  part4.py  part5.py  part_final.py
apachecon_iot_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: config.py  dashboard.py  iotdb_client.py  main.py  models.py  simulator_controller.py  zenoh_client.py
bridge/: __init__.py  zenoh_to_iotdb.py
frontend/: index.html
panel/: panel_app.py  requirements.txt
scripts/: sensor_simulator.py  start.sh  stop.sh  test.sh
src/: __init__.py  api.py  client_utils.py  iotdb_client.py  zenoh_client.py
tests/: __init__.py  test_api.py  test_bridge_flow.py  test_client_utils.py  test_config.py  test_dashboard_e2e.py  test_dashboard_echarts.py  test_dashboard_health.py  test_dashboard_integration.py  test_iotdb_client.py  test_iotdb_connection.py  test_sensor_flow.py  test_zenoh_client.py  test_zenoh_connection.py
